--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 					<div class="navbar-header">
 						<!-- supression texte 1px -->
 						<!-- ajout attribut alt & plus grande police -->
-						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Logo Chouette - La Chouette Agence - page d'accueil" height="50" /></a>
+						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Logo Chouette - La Chouette Agence - page d'accueil" height="50"/></a>
 						<!-- supression texte 1px -->
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+							<span class="sr-only">Activé navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 						</button>
 					</div>
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
@@ -71,7 +71,7 @@
 							<!-- supression list-item vide -->
 							<li>
 								<!-- renommer page contact / supression charactere unicode-->
-								<a class="nav-link" href="contact.html">Nous Contacter</a>
+								<a class="nav-link" href="contact.html">Nous Contacter!</a>
 							</li>
 						</ul>
 					</div>
@@ -84,11 +84,9 @@
 		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
-					<div class="col-sm-12 bg-contrast rounded">
+					<div class="col-sm-12 bg-contrast">
 						<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo La chouette agence"/>
-						<h1 class="text-center hero-bloc-text tc-white">
-							La chouette agence
-						</h1>
+						<h1 class="text-center hero-bloc-text tc-white">La chouette agence<h1>
 						<div class="text-center">
 							<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 						</div>
@@ -163,7 +161,7 @@
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace black-background">
 					<div class="col-sm-12 bgc-black">
-						<h2 class="mg-md text-center tc-white text-contrast">
+						<h2 class="mg-md text-center text-contrast-light">
 							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
 						</h2>
 						<p class="text-center white">
@@ -231,7 +229,7 @@
 		<!-- bloc-5-cta -->
 		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 			<div class="container bloc-lg">
-				<div class="row bg-contrast rounded bot-container">
+				<div class="row bg-contrast bot-container">
 					<h2 class="text-center tc-white font-700">
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
