--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
 		<div class="bloc bg-dots-bg texture-paper bg-banniere d-bloc bloc-bg-texture" id="bloc-6">
 			<div class="container bloc-lg">
 				<div class="row">
-					<div class="col-sm-12 bg-contrast-black">
+					<div class="col-sm-12 bg-contrast">
 						<h1 class="text-center hero-bloc-text tc-white text-contrast">
 							Parlons web design !
 						</h1>
@@ -148,7 +148,7 @@
 			<div class="container bloc-sm ">
 				<div class="row">
 					<div class="col-sm-12">
-						<p class="text-center white text-contrast">
+						<p class="text-center white">
 							La chouette agence - Agence web basée à Lyon.<br>
 						</p>
 						<div class="row row-no-gutters social">
