--- a/contact.html
+++ b/contact.html
@@ -75,12 +75,12 @@
 		<div class="bloc bg-dots-bg texture-paper bg-banniere d-bloc bloc-bg-texture" id="bloc-6">
 			<div class="container bloc-lg">
 				<div class="row">
-					<div class="col-sm-12 bg-contrast">
+					<div class="bg-contrast contact-container">
 						<h1 class="text-center hero-bloc-text tc-white text-contrast">
 							Parlons web design !
 						</h1>
-						<p class="text-center mg-lg tc-white tight-width-whitespace text-contrast">
-							Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
+						<p class="text-center tight-width-whitespace  text-contrast">
+							Nous sommes ravis que vous souhaitiez collaborer avec notre agence.
 							Parlez-nous de votre projet en complétant le formulaire ci-dessous.
 						</p>
 					</div>
