--- a/index.html
+++ b/index.html
@@ -84,9 +84,11 @@
 		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
-					<div class="col-sm-12 bg-contrast">
-						<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo La chouette agence"/>
-						<h1 class="text-center hero-bloc-text tc-white">La chouette agence<h1>
+					<div class="col-sm-12">
+						<img src="img/logo.png" class="logo center-block image-resize-mode" width="100" alt="Logo La chouette agence"/>
+						<div class="bgc-black title-container">
+							<h1 class="text-center hero-bloc-text text-contrast-light">La chouette agence<h1>
+						</div>
 						<div class="text-center">
 							<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 						</div>
@@ -229,10 +231,12 @@
 		<!-- bloc-5-cta -->
 		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 			<div class="container bloc-lg">
-				<div class="row bg-contrast bot-container">
-					<h2 class="text-center tc-white font-700">
-						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
-					</h2>
+				<div class="row">
+					<div class=" bgc-black  bot-container">
+						<h2 class="text-center text-contrast-light font-700">
+							Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
+						</h2>
+					</div>
 					<div class="col-sm-12 text-center">
 						<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 					</div>
