Contrast and layout tweak

--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
 		<div class="bloc bg-dots-bg texture-paper bg-banniere d-bloc bloc-bg-texture" id="bloc-6">
 			<div class="container bloc-lg">
 				<div class="row">
-					<div class="bg-contrast contact-container">
+					<div class="bgc-title contact-container">
 						<h1 class="text-center hero-bloc-text tc-white text-contrast">
 							Parlons web design !
 						</h1>
@@ -144,11 +144,11 @@
 
 
 		<!-- Footer - bloc-8 -->
-		<div class="bloc  bgc-black d-bloc" id="bloc-8">
+		<div class="bloc  bgc-footer d-bloc" id="bloc-8">
 			<div class="container bloc-sm ">
 				<div class="row">
 					<div class="col-sm-12">
-						<p class="text-center white">
+						<p class="text-center text-contrast">
 							La chouette agence - Agence web basée à Lyon.<br>
 						</p>
 						<div class="row row-no-gutters social">
