--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
 						<img src="img/logo.png" class="logo center-block image-resize-mode" width="100" alt="Logo La chouette agence"/>
-						<div class="bgc-black title-container">
-							<h1 class="text-center hero-bloc-text text-contrast-light">La chouette agence<h1>
+						<div class="bgc-title title-container">
+							<h1 class="text-center text-contrast">La chouette agence<h1>
 						</div>
 						<div class="text-center">
 							<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
@@ -164,11 +164,11 @@
 				<div class="row tight-width-whitespace black-background">
 					<div class="col-sm-12 bgc-black">
 						<h2 class="mg-md text-center text-contrast-light">
-							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
+							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.
 						</h2>
 						<p class="text-center white">
 							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu'elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d'une identité visuelle complète ou d'une refonte de votre site, n'hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br>
-							 <a class="link-contrast" href="contact.html">Contactez notre équipe</a>
+							<a class="link-contrast" href="contact.html">Contactez notre équipe</a>
 						</p>
 					</div>
 				</div>
@@ -250,7 +250,7 @@
 		<!-- ScrollToTop Button END-->
 
 		<!-- Footer - bloc-8 -->
-		<div class="bloc bgc-black d-bloc" id="bloc-8">
+		<div class="bloc bgc-footer d-bloc" id="bloc-8">
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
@@ -260,22 +260,22 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" title="Twitter" href="https://twitter.com/"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" title="Twitter" aria-label="Twitter" href="https://twitter.com/"><span class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a  class="social" title="Facebook" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
+									<a  class="social" title="Facebook" aria-label="Facebook" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" title="Dribble" href="https://dribble.com/"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" title="Dribble" aria-label="Dribble" href="https://dribble.com/"><span class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" title="Instagram" href="https://www.instagram.com/"><span class="fa fa-instagram icon-md"></span></a>
+									<a class="social" title="Instagram" aria-label="Instagram" href="https://www.instagram.com/"><span class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
 							<!-- Supression div Keyword  -->
