--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>La Chouette Agence | Entreprise de Web design à Lyon</title>
 	<meta name="description" content="Entreprise de web design situé a Lyon, conception ou refonte de votre site web, La chouette agence apporte son expertise aux entreprises et vous accompagne dans votre stratégie de création graphique de site web.">
     
-	<link rel="canonical" href="https://Docstone.github.io/la-chouette-agence/index.html" />
+	<link rel="canonical" href="https://Docstone.github.io/La-Chouette-Agence/index.html" />
 	<!-- changement du favicon en png -->
     <link rel="shortcut icon" type="image/png" href="./img/favicon.png">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
@@ -60,14 +60,11 @@
 						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Logo Chouette - La Chouette Agence - page d'accueil" height="50"/></a>
 						<!-- supression texte 1px -->
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-							<span class="sr-only">Activé navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+							<span class="sr-only">Activer navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 						</button>
 					</div>
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
-							<li>
-								<a class="nav-link" href="index.html">Accueil</a>
-							</li>
 							<!-- supression list-item vide -->
 							<li>
 								<!-- renommer page contact / supression charactere unicode-->
@@ -87,7 +84,7 @@
 					<div class="col-sm-12">
 						<img src="img/logo.png" class="logo center-block image-resize-mode" width="100" alt="Logo La chouette agence"/>
 						<div class="bgc-title title-container">
-							<h1 class="text-center text-contrast">La chouette agence</h1>
+							<h1 class="text-center text-contrast title-width">La chouette agence<br>-<br>Entreprise de web design à Lyon</h1>
 						</div>
 						<div class="text-center">
 							<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
