--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				<div class="row">
 					<div class="col-sm-12 text-center">
 						<!-- replaced img with h2 -->
-						<h2 class="title">La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</h2>
+						<h2 class="title">La chouette agence est une agence de web design qui aide les entreprises à réaliser un site web professionnel afin de devenir attractives et visibles sur Internet.</h2>
 					</div>
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
@@ -110,10 +110,10 @@
 							<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
 						<h3 class="mg-md text-center">
-							Web design
+							Web designers
 						</h3>
 						<p class="text-center ">
-							Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
+							Que vous ayez un site web qui a besoin d'un refonte ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 						</p>
 					</div>
 					<div class="col-sm-4">
@@ -121,7 +121,7 @@
 							<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
 						<h3 class="mg-md text-center">
-							Stratégie
+							Stratégie de création graphique
 						</h3>
 						<p class="text-center ">
 							Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
@@ -132,7 +132,7 @@
 							<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
 						<h3 class="mg-md text-center">
-							Illustrations
+							Illustrations Web
 						</h3>
 						<p class="text-center ">
 							Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
@@ -161,7 +161,7 @@
 				<div class="row tight-width-whitespace black-background">
 					<div class="col-sm-12 bgc-black">
 						<h2 class="mg-md text-center text-contrast-light">
-							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.
+							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer sur le web et à connaître le succès. Nous travaillons pour aider les entreprises locales à creer leur site internet et attirer de nouveaux clients.
 						</h2>
 						<p class="text-center white">
 							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu'elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d'une identité visuelle complète ou d'une refonte de votre site, n'hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.
@@ -182,7 +182,7 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6 pad-bot">
-						<a href="#" data-lightbox="img/1-LG.jpg" class="focused" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="Refonte d'un site web pour journal" class="img-responsive portfolio-thumb" /></a>
+						<a href="#" data-lightbox="img/1-LG.jpg" class="focused" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="Magazines empilés" class="img-responsive portfolio-thumb" /></a>
 						<h3 class="mg-tp text-center">
 							Refonte d'un site web pour un journal local
 						</h3>
@@ -191,9 +191,9 @@
 						</p>
 					</div>
 					<div class="col-sm-6 pad-bot">
-						<a href="#" data-lightbox="img/2-LG.jpg" class="focused" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" /></a>
+						<a href="#" data-lightbox="img/2-LG.jpg" class="focused" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="une femme prennant une photo avec un appareil professionnel" /></a>
 						<h3 class="mg-tp text-center">
-							Création d'un site web pour photographes
+							Création d'un site internet professionnel pour photographes
 						</h3>
 						<p class="text-center">
 							Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
@@ -202,7 +202,7 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6 pad-bot">
-						<a href="#" data-lightbox="img/3-LG.jpg" class="focused" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour voyageur"/></a>
+						<a href="#" data-lightbox="img/3-LG.jpg" class="focused" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="Materiel de photographie exposé"/></a>
 						<h3 class="mg-tp text-center">
 							Création d'un site internet pour un voyageur
 						</h3>
@@ -211,9 +211,9 @@
 						</p>
 					</div>
 					<div class="col-sm-6 pad-bot">
-						<a href="#" data-lightbox="img/4-LG.jpg" class="focused"	data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour agence de mariage" /></a>
+						<a href="#" data-lightbox="img/4-LG.jpg" class="focused"	data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="Planning d'un marriage avec different materiaux de papeterie etalé sur une table" /></a>
 						<h3 class="mg-tp text-center">
-							Conception d'un site pour une agence de mariage
+							Conception de pages web pour une agence de mariage
 						</h3>
 						<p class="text-center">
 							Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
