Ajouts placeholder form, ajout liens vers contenu

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <title>La Chouette Agence | Entreprise de Web design à Lyon</title>
 	<meta name="description" content="Entreprise de web design situé a Lyon, conception ou refonte de votre site web, La chouette agence apporte son expertise aux entreprises et vous accompagne dans votre stratégie de création graphique de site web.">
     
-	<link rel="canonical" href="https://Docstone.github.io/La-Chouette-Agence/index.html" />
 	<!-- changement du favicon en png -->
     <link rel="shortcut icon" type="image/png" href="./img/favicon.png">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
@@ -68,7 +67,13 @@
 							<!-- supression list-item vide -->
 							<li>
 								<!-- renommer page contact / supression charactere unicode-->
-								<a class="nav-link" href="contact.html">Nous Contacter!</a>
+								<a class="nav-link" href="contact.html">Nous Contacter</a>
+							</li>
+							<li>
+								<a class="nav-link" href="#mission">Nos Missions</a>
+							</li>
+							<li>
+								<a class="nav-link" href="#réalisation"">Nos Réalisations</a>
 							</li>
 						</ul>
 					</div>
@@ -101,7 +106,7 @@
 				<div class="row">
 					<div class="col-sm-12 text-center">
 						<!-- replaced img with h2 -->
-						<h2 class="title">La chouette agence est une agence de web design qui aide les entreprises à réaliser un site web professionnel afin de devenir attractives et visibles sur Internet.</h2>
+						<h2 id="mission" class="title">La chouette agence est une agence de web design qui aide les entreprises à réaliser un site web professionnel afin de devenir attractives et visibles sur Internet.</h2>
 					</div>
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
@@ -176,8 +181,8 @@
 		<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 			<div class="container bloc-lg">
 				<div class="row">
-					<div class="col-sm-12 text-center">
-						<h2>Nous travaillons avec beaucoup de clients, voici nos réalisations.</h2>
+					<div id="réalisation" class="col-sm-12 text-center">
+						<h2 class="title">Nous travaillons avec beaucoup de clients, voici un aperçu de nos réalisations.</h2>
 					</div>
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
