--- a/contact.html
+++ b/contact.html
@@ -93,19 +93,20 @@
 				<div class="row">
 					<div class="col-sm-6">
 						<!-- deleted success-msg and fail-msg invalid attribute -->
+						<!-- ajout placeholder -->
 						<form id="form_1" novalidate>
 							<div class="form-group">
 								<!-- added matching id/label pair -->
 								<label for="name" class="form-label">
 									Nom
 								</label>
-								<input id="name" class="form-control" required />
+								<input id="name" placeholder="ex: John Doe" class="form-control" required />
 							</div>
 							<div class="form-group">
 								<label for="email" class="form-label">
 									Adresse email
 								</label>
-								<input id="email" class="form-control" type="email" required />
+								<input id="email" placeholder="ex: johndoe@gmail.com" class="form-control" type="email" required />
 							</div>
 							<div class="form-group">
 								<label for="from" class="form-label">
@@ -113,13 +114,13 @@
 								</label>
 								<!-- changement du type bef=email aft=text -->
 								<!-- deleted id=504 -->
-								<input id="from" class="form-control" type="text" required/>
+								<input id="from" placeholder="ex: Publicité" class="form-control" type="text" required/>
 							</div>
 							<div class="form-group">
 								<label for="message" class="form-label">
-									Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
+									Brief de votre projet<br>
 								</label>
-								<textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+								<textarea id="message"  placeholder="Ajoutez autant de détails que nécessaire" class="form-control" rows="4" cols="50" required></textarea>
 							</div> 
 							<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 								Envoyer
