--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
 						<img src="img/logo.png" class="logo center-block image-resize-mode" width="100" alt="Logo La chouette agence"/>
-						<div class="bgc-title title-container">
-							<h1 class="text-center text-contrast title-width">La chouette agence<br>-<br>Entreprise de web design à Lyon</h1>
+						<div class="bgc-black title-container">
+							<h1 class="text-center text-contrast-light title-width">La chouette agence<br>-<br>Entreprise de web design à Lyon</h1>
 						</div>
 						<div class="text-center">
 							<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
