--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 						<div class="text-center">
 							<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
-						<h3 class="mg-md text-center">
+						<h3 class="mg-md text-center spacing">
 							Web designers
 						</h3>
 						<p class="text-center ">
@@ -136,7 +136,7 @@
 						<div class="text-center">
 							<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
-						<h3 class="mg-md text-center">
+						<h3 class="mg-md text-center spacing">
 							Illustrations Web
 						</h3>
 						<p class="text-center ">
