fix anchor link, mail link, w3c error

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 								<a class="nav-link" href="#mission">Nos Missions</a>
 							</li>
 							<li>
-								<a class="nav-link" href="#réalisation"">Nos Réalisations</a>
+								<a class="nav-link" href="#réalisation">Nos Réalisations</a>
 							</li>
 						</ul>
 					</div>
@@ -83,7 +83,7 @@
 		<!-- bloc-0 END -->
 
 		<!-- bloc-1-presentation -->
-		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax banner-height" id="bloc-1-hero">
+		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
@@ -261,22 +261,22 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" title="Twitter" aria-label="Twitter" href="https://twitter.com/"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" title="Twitter" target="blank" aria-label="Twitter" href="https://twitter.com/"><span class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a  class="social" title="Facebook" aria-label="Facebook" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
+									<a  class="social" title="Facebook" target="blank" aria-label="Facebook" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" title="Dribble" aria-label="Dribble" href="https://dribble.com/"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" title="Dribble" target="blank" aria-label="Dribble" href="https://dribble.com/"><span class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" title="Instagram" aria-label="Instagram" href="https://www.instagram.com/"><span class="fa fa-instagram icon-md"></span></a>
+									<a class="social" title="Instagram" target="blank" aria-label="Instagram" href="https://www.instagram.com/"><span class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
 							<!-- Supression div Keyword  -->
