--- a/contact.html
+++ b/contact.html
@@ -129,7 +129,7 @@
 					</div>
 					<div class="col-sm-6 adress-container">
 						<p class="adress-text">
-							contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
+							<a href="mailto:contact@lachouetteagence.com">contact@lachouetteagence.com</a><br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 						</p>
 					</div>
 				</div>
