--- a/contact.html
+++ b/contact.html
@@ -153,22 +153,22 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" title="Twitter" href="https://twitter.com/"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" title="Twitter" target="_blank" href="https://twitter.com/"><span class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" title="Facebook" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
+									<a class="social" title="Facebook" target="_blank" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" title="Dribble" href="https://dribble.com/"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" title="Dribble" target="_blank" href="https://dribble.com/"><span class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" title="Instagram" href="https://www.instagram.com/"><span class="fa fa-instagram icon-md "></span></a>
+									<a class="social" title="Instagram" target="_blank" href="https://www.instagram.com/"><span class="fa fa-instagram icon-md "></span></a>
 								</div>
 							</div>
 						</div>
