--- a/index.html
+++ b/index.html
@@ -261,22 +261,22 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" title="Twitter" target="blank" aria-label="Twitter" href="https://twitter.com/"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" title="Twitter" target="_blank" aria-label="Twitter" href="https://twitter.com/"><span class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a  class="social" title="Facebook" target="blank" aria-label="Facebook" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
+									<a  class="social" title="Facebook" target="_blank" aria-label="Facebook" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" title="Dribble" target="blank" aria-label="Dribble" href="https://dribble.com/"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" title="Dribble" target="_blank" aria-label="Dribble" href="https://dribble.com/"><span class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" title="Instagram" target="blank" aria-label="Instagram" href="https://www.instagram.com/"><span class="fa fa-instagram icon-md"></span></a>
+									<a class="social" title="Instagram" target="_blank" aria-label="Instagram" href="https://www.instagram.com/"><span class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
 							<!-- Supression div Keyword  -->
